add version previx

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -74,6 +74,6 @@ jobs:
             github.rest.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: "refs/tags/${{ steps.get-version.outputs.nextStrict }}",
+              ref: "refs/tags/v${{ steps.get-version.outputs.nextStrict }}",
               sha: context.sha
             })
